Bug 329863 - Untranslatable string when I use 'Save as...' to save a PDF file with annotations
Summary: Untranslatable string when I use 'Save as...' to save a PDF file with annotat...
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.17.3
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-12 03:10 UTC by André Marcelo Alvarenga
Modified: 2014-01-12 15:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A patch to add i18n() call in git/master (753 bytes, patch)
2014-01-12 08:21 UTC, Yuri Chornoivan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2014-01-12 03:10:37 UTC
String:
"Your annotations will not be exported.\nYou can export the annotated document using File -> Export As -> Document Archive"

file: part.cpp

Reproducible: Always
Comment 1 Yuri Chornoivan 2014-01-12 08:21:18 UTC
Created attachment 84593 [details]
A patch to add i18n() call in git/master
Comment 2 Albert Astals Cid 2014-01-12 15:38:13 UTC
Thanks Yuri, please commit it to both 4.12 and then merge 4.12 to master.
Comment 3 Yuri Chornoivan 2014-01-12 15:52:46 UTC
Git commit ab701045bded86a7a5c7bba8e6f776a06c99bb17 by Yuri Chornoivan.
Committed on 12/01/2014 at 15:52.
Pushed by yurchor into branch 'KDE/4.12'.

Make the string in Save as widget translatable

M  +1    -1    part.cpp

http://commits.kde.org/okular/ab701045bded86a7a5c7bba8e6f776a06c99bb17
Comment 4 Yuri Chornoivan 2014-01-12 15:58:43 UTC
Git commit c9dc2277cf095bd50264db9d392460bf88e645f4 by Yuri Chornoivan.
Committed on 12/01/2014 at 15:52.
Pushed by yurchor into branch 'master'.

Make the string in Save as widget translatable

M  +1    -1    part.cpp

http://commits.kde.org/okular/c9dc2277cf095bd50264db9d392460bf88e645f4