Make the string in Save as widget translatable

BUG: 329863